# cpp-algo

./: .bazelignore  .bazelrc  .clang-format  .gitignore  CMakeLists.txt  README.md  WORKSPACE
cmake/: flags.cmake
include/algo/algo/aho_corasick/: aho_corasick.h
include/algo/algo/common/: types.h
include/algo/algo/dsu/: dsu.h
include/algo/algo/fenwick_tree/: fenwick_tree.h
include/algo/algo/kdtree/: kdtree.h
include/algo/algo/leftist_heap/: leftist_heap.h
include/algo/algo/min_stack/: min_queue.h  min_stack.h
include/algo/algo/segment_tree/: segment_tree.h
include/algo/algo/sparse_tree/: sparse_tree.h
include/algo/algo/treap/: adapter.h  node.h  treap.h
include/algo/algo/utility/: nd_container.h
include/di/di/: constructor_nargs.h  di.h
include/graph/graph/algo/: bridges.h  connected.h  cutpoints.h  cycle.h  dijkstra.h  reachable.h  top_sort.h
include/graph/graph/repr/: concepts.h  storage_type.h  traits.h
include/graph/graph/repr/adj_list/: adj_list.h
include/graph/graph/repr/adj_matrix/: adj_matrix.h  repr.h  transposed.h
include/graph/graph/utility/: queue.h
include/utility/utility/: constexpr_for.h  helpers.h  templates.h  type_list.h
include/utility/utility/co_resource/: co_resource.h
include/utility/utility/functional/: func.h
include/utility/utility/helpers/: front.h  impl.h  preface.h  unit.h
include/utility/utility/templates/: front.h  impl.h  preface.h  unit.h
include/utility/utility/type_list/: front.h  impl.h  list.h  unit.h
include/value_or_error/value_or_error/: helpers.h  tools.h  value_or_error.h  vtables.h
include/wptr/wptr/: wptr.h
src/: CMakeLists.txt
src/algo/: BUILD  CMakeLists.txt
src/algo/aho_corasick/: aho_corasick.h
src/algo/common/: types.h
src/algo/dsu/: dsu.hpp
src/algo/fenwick_tree/: fenwick_tree.h
src/algo/graph/: BUILD
src/algo/graph/algo/: bridges.h  connected.h  cutpoints.h  cycle.h  dijkstra.h  reachable.h  top_sort.h
src/algo/graph/repr/: traits.h
src/algo/graph/repr/adj_list/: adj_list.h
src/algo/graph/repr/adj_matrix/: adj_matrix.h  repr.h  transposed.h
src/algo/graph/utility/: queue.h
src/algo/kdtree/: kdtree.h
src/algo/leftist_heap/: leftist_heap.h
src/algo/min_stack/: min_queue.hpp  min_stack.hpp
src/algo/segment_tree/: segment_tree.h
src/algo/sparse_tree/: sparse_tree.h
src/algo/treap/: adapter.h  node.cpp  node.h  treap.h
src/algo/utility/: nd_container.h  nd_helpers.h
src/coro/: BUILD  folly.h
src/di/: CMakeLists.txt
src/graph/: BUILD  CMakeLists.txt
src/graph/algo/: connected.h  dijkstra.h  top_sort.h
src/graph/repr/: concepts.h  traits.h
src/graph/repr/adj_list/: adj_list.h
src/graph/repr/adj_matrix/: repr.h  transposed.h
src/test/: BUILD  aho_corasick_test.cpp  fenwick_tree_benchmark.cpp  fenwick_tree_test.cpp  segment_tree_benchmark.cpp  segment_tree_test.cpp  segment_vs_other_tree_test.cpp  segment_vs_sparse_tree_test.cpp  sparse_tree_benchmark.cpp  sparse_tree_test.cpp  treap_test.cpp
src/test/aho_corasick/: aho_corasick_test.cpp
src/test/fenwick_tree/: fenwick_tree_benchmark.cpp  fenwick_tree_test.cpp
src/test/graph/: BUILD
src/test/graph/algo/: connected_test.cpp  cycle_test.cpp  dijkstra_test.cpp  reachable_test.cpp  top_sort_test.cpp
src/test/graph/repr/: adj_matrix_test.cpp
src/test/graph/utility/: fixture.h  graph_types.h  small_graphs.h
src/test/kdtree/: kdtree_benchmark.cpp  kdtree_test.cpp
src/test/leftist_heap/: leftist_heap_test.cpp
src/test/min_stack/: min_stack_test.cpp
src/test/rq_utils/: benchmark.h  compare_range_engines.h  generate.h
src/test/segment_tree/: segment_tree_benchmark.cpp  segment_tree_test.cpp  segment_vs_other_tree_test.cpp
src/test/sparse_tree/: sparse_tree_benchmark.cpp  sparse_tree_test.cpp
src/test/treap/: treap_test.cpp
src/test/utility/: random.cpp  type_list.h  zip_view.h
src/test/utils/: benchmark.h  compare_range_engines.h  generate.cpp  generate.h  range_query.h
src/utility/: BUILD  CMakeLists.txt  instanceof_template.h  type_list.h
src/value_or_error/: CMakeLists.txt
src/wptr/: CMakeLists.txt
test/: CMakeLists.txt
test/algo/: BUILD  CMakeLists.txt
test/algo/fenwick_tree/: fenwick_tree_benchmark.cpp  fenwick_tree_test.cpp
test/algo/kdtree/: kdtree_benchmark.cpp  kdtree_test.cpp
test/algo/leftist_heap/: leftist_heap_test.cpp
test/algo/min_stack/: min_stack_test.cpp
test/algo/rq_utils/: range_query.h
test/algo/segment_tree/: segment_tree_benchmark.cpp  segment_tree_test.cpp  segment_vs_other_tree_test.cpp
test/algo/sparse_tree/: sparse_tree_benchmark.cpp  sparse_tree_test.cpp
test/algo/treap/: treap_test.cpp
test/di/: CMakeLists.txt  di_test.cpp
test/graph/: BUILD  CMakeLists.txt
test/graph/algo/: connected_test.cpp  cutpoints_test.cpp  cycle_test.cpp  reachable_test.cpp  top_sort_test.cpp
test/graph/repr/: adj_matrix_test.cpp
test/graph/utility/: fixture.h  graph_types.h
test/include/test/algo/rq_utils/: benchmark.h  compare_range_engines.h  range_query.h
test/include/test/graph/utility/: fixture.h  graph_types.h  small_graphs.h
test/src/: CMakeLists.txt
test/utility/: BUILD  CMakeLists.txt  random.h
test/utility/co_resource/: co_resource_test.cpp
test/utility/functional/: func_test.cpp
test/value_or_error/: CMakeLists.txt  remember_op.h  small_tests.cpp  static_tests.cpp  tests.cpp  voe_tools.h
test/wptr/: CMakeLists.txt  wptr_test.cpp
